# cli-memo

./: .env  .gitignore  Cargo.toml  Design.md  README.md
migrations/2022-10-10-143827_create_memos/: down.sql  up.sql
migrations/2023-01-20-154235_memos/: up.sql
src/: constant.rs  enums.rs  lib.rs  main.rs  memo.rs  memo_manager.rs  models.rs  schema.rs
src/test/: memo_manager.rs
