[package]
name = "climemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["sqlite", "chrono", "uuid"] }
dotenvy = "0.15.6"
structopt = "0.3.26"
strum = "0.24.1"
strum_macros = "0.24.3"
dirs = "4.0.0"
